fixed some layout problems

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -61,3 +61,12 @@ width: 75px;
 height: 34px;
 position: absolute;
 }
+
+.sm-btn {
+  background-color: #FAAA0A;
+  padding: 2px 30px;
+  border-radius: 20px;
+  border-color: transparent;
+  color: #FFFFFF;
+  font-size: 10px;
+}
